5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_1951.log
== TEST (2019-05-02 10:43:30) 
-- CODE:
px0 = float(input("x0 de p0:"))
py0 = float(input("y0 de p0:"))
px1 = float(input("x1 de p1:"))
py1 = float(input("y1 de p1:"))
px2 = float(input("x2 de p2:"))
py2 = float(input("y2 de p3:"))

c=(px1-px0)*(py2-py0)-(px2-px0)*(py1-py0)

if(c<0):
	print("A direita da reta")
elif(c>0):
	print("A esquerda da reta")
elif(c==0)
	print("Sobre a reta")

-- ERROR:
File "XXXX", line 14
    elif(c==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:43:41) 
-- CODE:
px0 = float(input("x0 de p0:"))
py0 = float(input("y0 de p0:"))
px1 = float(input("x1 de p1:"))
py1 = float(input("y1 de p1:"))
px2 = float(input("x2 de p2:"))
py2 = float(input("y2 de p3:"))

c=(px1-px0)*(py2-py0)-(px2-px0)*(py1-py0)

if(c<0):
	print("A direita da reta")
elif(c>0):
	print("A esquerda da reta")
elif(c==0):
	print("Sobre a reta")

-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:44:04) 
-- CODE:
px0 = float(input("x0 de p0:"))
py0 = float(input("y0 de p0:"))
px1 = float(input("x1 de p1:"))
py1 = float(input("y1 de p1:"))
px2 = float(input("x2 de p2:"))
py2 = float(input("y2 de p3:"))

c=(px1-px0)*(py2-py0)-(px2-px0)*(py1-py0)

if(c<0):
	print("A direita da reta")
elif(c>0):
	print("A esquerda da reta")
elif(c==0):
	print("Sobre a reta")

-- EXECUTION TIME:
0.193021
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 21:27:17) 
-- CODE:
px0 = float(input("x0 de p0:"))
py0 = float(input("y0 de p0:"))
px1 = float(input("x1 de p1:"))
py1 = float(input("y1 de p1:"))
px2 = float(input("x2 de p2:"))
py2 = float(input("y2 de p3:"))

c=(px1-px0)*(py2-py0)-(px2-px0)*(py1-py0)

if(c<0):
	print("A direita da reta")
elif(c>0):
	print("A esquerda da reta")
elif(c==0):
	print("Sobre a reta")

-- EXECUTION TIME:
0.228323
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
